--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- componentes -->
     <script src="scripts/components/raiz.js"></script>
     <script src="scripts/components/detalle-articulo.js"></script>
+    <script src="scripts/components/listado-productos.js"></script>
 
     <!-- Directivas -->
     <script src="scripts/directives/lista-productos.js"></script>
