--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Angular js -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
+    <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
+
 
     <!-- Configuración del Modula -->
     <script src="scripts/app.js"></script>
@@ -32,6 +34,10 @@
     <!-- Directivas -->
     <script src="scripts/directives/lista-productos.js"></script>
 
+    <!-- Filtros -->
+    <script src="scripts/filter/plataforma.js"></script>
+    <script src="scripts/filter/eliminaplataforma.js"></script>
+    <script src="scripts/filter/resumentexto.js"></script>
 
 
 </head>
