Configuramos setting con lo values

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <script src="scripts/filter/eliminaplataforma.js"></script>
     <script src="scripts/filter/resumentexto.js"></script>
 
+    <!-- Values -->
+    <script src="scripts/value/setting.js"></script>
+
 
 </head>
 <body ng-app="whatapop">
