--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     <script src="scripts/services/ProductService.js"></script>
     <script src="scripts/services/CategoryService.js"></script>
     <script src="scripts/services/UserService.js"></script>
+    <script src="scripts/services/Weblocal.js"></script>
+    <script src="scripts/services/Location.js"></script>
 
     <!-- componentes -->
     <script src="scripts/components/raiz.js"></script>
     <script src="scripts/components/detalle-articulo.js"></script>
     <script src="scripts/components/listado-productos.js"></script>
     <script src="scripts/components/seller.js"></script>
+
 
 
     <!-- Directivas -->
@@ -42,6 +45,9 @@
 
     <!-- Values -->
     <script src="scripts/value/setting.js"></script>
+
+    <!-- vendor -->
+    <script src="node_modules/ng-haversine/ng-haversine.min.js"></script>
 
 
 </head>
